2004-03-04  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/Ashikhmin.cpp (ashikhmin_specular): clamp more properly,
	although I think it's still slightly off.

	* src/Texter.cpp (Texter): Use setStringParam to allow the user to
	change the text.
	(doText): Added a few letters.

	* src/ShrikeFrame.cpp (showProgram): Added functions to show the
	assembly code in a separate window.
	(ShrikeFrame): Added a "Shader" menu.

	* src/Shader.cpp (bind): Don't print out the shader program assembly.
	(beginStringParams): Added this function.
	(endStringParams): Added this function.
	(setStringParam): Added this function, to be used by derived classes.

	* src/ShrikePropsDialog.cpp: Added property dialog.

	* src/Texter.cpp: Sh has a "Hello World" program now.

	* src/ShrikeCanvas.cpp (usingShaders): Only enabled
	GL_VERTEX_PROGRAM and GL_FRAGMENT_PROGRAM when a shader is set.

2004-03-01  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/UniformPanel.cpp: Much better animation.

2004-02-28  Bryan Chan <b8chan@uwaterloo.ca>

	* src/ShrikeCanvas.?pp, src/ShrikeFrame.?pp:
	Switched to ShObjMesh
	
2004-02-27  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeCanvas.cpp (GL_GLEXT_LEGACY): Use this so that we get
	glMultiTexCoord...ARB function prototypes.

	* src/CelShader.cpp (init): Added a scale to the texcoord transform.

	* src/Ashikhmin.cpp: Make Ashikhmin leaner, so it fits in ATI limits.

	* src/ShrikeFrame.cpp (initShaderList): Sort listbox

	* src/SimplePhong.cpp: Added simple phong example for educational uses.

	* src/SimpleDiffuse.cpp: Added simple diffuse example for
	educational uses.

	* src/WobbleShader.cpp: Added Mr Wobble!

2004-02-20  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/CelShader.cpp (init): Crazy CelShader craziness.
	(init): CelShader improvements.

	* src/DiscoShader.cpp (init): Use mv_inverse to transform the
	reflection vector. Also make the texcoords move with time.

	* src/Globals.hpp: Added mv_inverse.
