@@ -1,5 +1,8 @@
 2004-03-04  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
+	* src/ShrikeFrame.cpp (ShrikeFrame): Use more sane default sizes
+	and a minimum panel size.
+
 	* src/Ashikhmin.cpp (ashikhmin_specular): clamp more properly,
 	although I think it's still slightly off.
 
